# Final_Project_wl2788

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: final_project_wl2788.rst  modules.rst
final_project/: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
final_project/docs/: conf.py  index.rst  installation.rst  usage.rst
final_project/tests/: test_final_project.py
final_project_wl2788/: final_project_wl2788.py
tests/: test_final_project_wl2788.py
