[tool.poetry]
name = "final_project"
version = "0.1.0"
description = "Python package for final project with game giveaways."
authors = ["Wenyu <71299532+Irene-2020@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
